# MaximumEffort

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-project.yml  cmake-multi-platform.yml
assets/: arrow.ase  bat.ase  blue_mushroom.ase  blue_slime.ase  boar.ase  boomerang.ase  character.ase  character_new.ase  dungeon.ase  enemies.csv  eyeball.ase  grey_slime.ase  map.json  map.tmx  overworld.tsx  stump.ase  waves.csv  xp.ase  zombie.ase
assets/downloads/: Monster RPG Pack.rar
assets/enemies/: enemies.csv
assets/passives/: edges.csv  edges.json  nodes.csv  nodes.json
include/: aabb_grid.h  camera.h  common.h  cute_aabb_grid.h  cute_ext.h  ecs.h  enemy.h  enemy_spawner.h  enemy_type.h  factories.h  game.h  geometry.h  log.h  particle_system.h  player.h  projectile.h  projectile_factories.h  singleton.h  spatial_hash.h  tiled_map.h  type_id.h  weapon.h
include/cmp/: boomerang_movement_component.h  c_debug_draw_circle.h  c_enemy_spawner.h  c_faction.h  c_hitbox.h  c_hurtbox.h  c_input.h  c_lifetime.h  c_movement.h  c_movement_behavior_constant_direction.h  c_movement_behavior_follow_target.h  c_physics.h  c_player.h  c_projectile.h  c_sprite.h  c_transform.h  c_weapon.h  damage_component.h  debug_draw_circle.h  debug_draw_circle_component.h  enemy.h  enemy_component.h  enemy_spawner.h  enemy_spawner_component.h  follow_target_behavior_component.h  frame_destroy_component.h  health_component.h  hitbox.h  hitbox_component.h  hurtbox.h  hurtbox_component.h  input.h  input_component.h  lifetime.h  movement.h  movement_behavior_constant_direction.h  movement_behavior_follow_target.h  movement_component.h  physics_component.h  player.h  (+13 more)
include/prefabs/: player_prefab.h  projectile_boomerang_prefab.h
include/states/: game_state.h  game_state_main_menu.h  game_state_playing.h
include/sys/: behavior_constant_direction_system.h  behavior_follow_target_system.h  camera_system.h  damage_system.h  debug_draw_system.h  enemy_target_system.h  input_system.h  lifetime_system.h  movement_behavior_constant_direction_system.h  movement_behavior_follow_target_system.h  movement_system.h  physics_system.h  player_animation_system.h  render_system.h  spawner_system.h  system.h  target_system.h  transform_system.h  weapon_system.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  aabb_grid.h  array_algorithms.h  assets.cpp  assets.h  camera.cpp  common.h  cute_aabb_grid.cpp  cute_headers.cpp  damage_numbers.cpp  damage_numbers.h  difficulty_modifiers.h  enemies.cpp  enemies.h  enemy.cpp  enemy_spawner.cpp  enemy_type.h  event.h  factories.cpp  game.cpp  game.h  game_timer.cpp  game_timer.h  json.cpp  json.h  level.cpp  level.h  level_1.cpp  level_1.h  leveling_overlay.cpp  leveling_overlay.h  log.h  main.cpp  particle_system.h  passive_tree.cpp  passive_tree.h  player.cpp  projectile.cpp  projectile_factories.cpp  prototype_map.h  (+7 more)
src/cmp/: age_component.h  bullet_emitter_component.h  c_transform.cpp  damage_component.h  debug_draw_circle_component.h  drop_xp_component.h  enemy_component.h  enemy_spawner_component.h  facing_component.h  frame_destroy_component.h  health_component.h  hit_component.h  hit_immunity_component.h  hitbox_component.h  homing_mover_component.h  hurtbox_component.h  input_component.h  level_component.h  lifetime_component.h  modifiers_component.h  movement_behavior_constant_direction_component.h  movement_behavior_follow_target_component.h  movement_component.h  physics_component.h  pickup_collector_component.h  pickup_component.h  player_component.h  projectile_component.h  scene_node_component.cpp  sprite_component.h  stats_component.h  transform_component.cpp  transform_component.h  weapon_component.h  xp_component.h
src/event_handlers/: damage_event_handler.cpp  damage_event_handler.h  damage_numbers_event_handler.cpp  damage_numbers_event_handler.h  death_event_handler.cpp  death_event_handler.h  hit_event_handler.cpp  hit_event_handler.h  level_up_event_handler.cpp  level_up_event_handler.h
src/events/: damage_event.h  death_event.h  event_bus.h  hit_event.h  level_up_event.h  pickup_collected_event.h  subscription.h  xp_gained_event.h
src/factories/: enemy_factory.cpp  enemy_factory.h
src/http/: CMakeLists.txt  http_server.cpp  http_server.h  http_server_main.cpp  httplib.h
src/lib/: cute_headers.cpp
src/prefabs/: enemy_eyeball_prefab.cpp  enemy_eyeball_prefab.h  enemy_prefab.cpp  enemy_prefab.h  enemy_spawner_prefab.cpp  enemy_spawner_prefab.h  player_prefab.cpp  projectile_boomerang_prefab.cpp  projectile_boomerang_prefab.h  projectile_prefab.cpp  projectile_prefab.h  weapon_boomerang_prefab.cpp  weapon_boomerang_prefab.h  weapon_prefab.cpp  weapon_prefab.h
src/rendering/: render_target.cpp  render_target.h
src/shaders/: blit.glsl  blit_shader.h
src/states/: game_state.h  game_state_loading_level.cpp  game_state_loading_level.h  game_state_main_menu.cpp  game_state_main_menu.h  game_state_playing.cpp  game_state_playing.h
src/sys/: animation_system.cpp  behavior_constant_direction_system.cpp  behavior_follow_target_system.cpp  camera_system.cpp  camera_system.h  damage_system.cpp  debug_draw_system.cpp  difficulty_system.cpp  difficulty_system.h  enemy_target_system.cpp  health_system.cpp  health_system.h  hit_immunity_system.cpp  hit_immunity_system.h  homing_mover_system.cpp  homing_mover_system.h  input_system.cpp  input_system.h  lifetime_system.cpp  lifetime_system.h  movement_behavior_constant_direction_system.cpp  movement_behavior_follow_target_system.cpp  movement_behavior_system.cpp  movement_behavior_system.h  movement_system.cpp  movement_system.h  physics_system.cpp  physics_system.h  pickup_system.cpp  pickup_system.h  player_animation_system.cpp  player_animation_system.h  projectile_system.cpp  projectile_system.h  render_system.cpp  render_system.h  spawner_system.cpp  spawner_system.h  target_system.cpp  transform_system.cpp  (+4 more)
src/tiled/: tiled_map.cpp
test/: CMakeLists.txt  main.cpp  pico_headers.cpp  test_csv.cpp  test_event_system.cpp
(+57 files in other folders)
